refactoring code , pending implementation websocket and message upload file
