# src/main/resources/openapi/documentation.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.3"
 info:
   title: "Chat API"
-  description: "A simple chat API with user authentication and real-time messaging."
+  description: "A simple chat API with user authentication and file upload/download."
   version: "1.0.0"
 
 servers:
@@ -56,7 +56,7 @@ paths:
   /users/{username}:
     get:
       security:
-        - bearerAuth: []  # Esta ruta requiere autenticación
+        - bearerAuth: []
       description: "Retrieve a user by username"
       parameters:
         - name: "username"
@@ -77,7 +77,7 @@ paths:
   /messages:
     get:
       security:
-        - bearerAuth: []  # Esta ruta requiere autenticación
+        - bearerAuth: []
       description: "Retrieve all messages"
       responses:
         "200":
@@ -90,7 +90,7 @@ paths:
                   $ref: "#/components/schemas/Message"
     post:
       security:
-        - bearerAuth: []  # Esta ruta requiere autenticación
+        - bearerAuth: []
       description: "Send a new message"
       requestBody:
         required: true
@@ -104,101 +104,67 @@ paths:
         "400":
           description: "Invalid message data"
 
-  /chat:
-    get:
-      security:
-        - bearerAuth: []  # Esta ruta requiere autenticación
-      description: "WebSocket endpoint for real-time messaging"
-      responses:
-        "101":
-          description: "Switching protocols for WebSocket connection"
-
+  /upload:
     post:
       security:
-        - bearerAuth: []  # Requiere autenticación
-      description: "Create a new chat"
+        - bearerAuth: [ ]
+      summary: Upload a file to GridFS
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
-              $ref: "#/components/schemas/ChatRoomRequest"
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                fileName:
+                  type: string
+                contentType:
+                  type: string
       responses:
         "201":
-          description: "Chat successfully created"
+          description: File uploaded successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ChatRoom"
+                type: object
+                properties:
+                  fileId:
+                    type: string
         "400":
-          description: "Invalid chat data"
+          description: Invalid upload request
 
-  /chat/{chatId}:
-    get:
-      security:
-        - bearerAuth: []  # Requiere autenticación
-      description: "Retrieve chat details by chat ID"
-      parameters:
-        - name: "chatId"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "200":
-          description: "Chat details"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ChatRoom"
-        "404":
-          description: "Chat not found"
+    /file/{fileId}:
+      get:
+        security:
+          - bearerAuth: [ ]
+        summary: Download a file from GridFS by ID
+        parameters:
+          - name: fileId
+            in: path
+            required: true
+            schema:
+              type: string
+        responses:
+          "200":
+            description: File retrieved successfully
+            content:
+              application/octet-stream:
+                schema:
+                  type: string
+                  format: binary
+          "404":
+            description: File not found
 
-    delete:
-      security:
-        - bearerAuth: []  # Requiere autenticación
-      description: "Delete a chat by ID"
-      parameters:
-        - name: "chatId"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "200":
-          description: "Chat deleted successfully"
-        "404":
-          description: "Chat not found"
-
-  /chat/user/{username}:
-    get:
-      security:
-        - bearerAuth: []  # Requiere autenticación
-      description: "Retrieve all chats for a specific user"
-      parameters:
-        - name: "username"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
-      responses:
-        "200":
-          description: "List of user's chats"
-          content:
-            application/json:
-              schema:
-                type: "array"
-                items:
-                  $ref: "#/components/schemas/ChatRoom"
-        "404":
-          description: "User not found or no chats available"
 
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
-      bearerFormat: JWT  # Indica que se usa un token JWT
+      bearerFormat: JWT
 
   schemas:
     UserRequest:
@@ -246,29 +212,3 @@ components:
         fileUrl:
           type: "string"
           nullable: true
-
-    ChatRoomRequest:
-      type: "object"
-      properties:
-        name:
-          type: "string"
-        users:
-          type: "array"
-          items:
-            type: "string"
-
-    ChatRoom:
-      type: "object"
-      properties:
-        id:
-          type: "string"
-        name:
-          type: "string"
-        users:
-          type: "array"
-          items:
-            type: "string"
-        messages:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/Message"
